[tool.poetry]
name = "crp2021"
version = "0.1.0"
description = ""
authors = ["CarolineMorton12 <cm2781@bath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
numpy = "^2.0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
